[b] - Fix overflow error

--- a/static/css/packages/show.scss
+++ b/static/css/packages/show.scss
@@ -419,10 +419,18 @@
           border-radius: 4px;
           margin: 0;
           padding: 5px 8px;
-          display: inline-block;
           border: none;
-          white-space: pre;
-          overflow: hidden;
+          display: block;
+          margin-top: 4px;
+          white-space: normal;
+          
+          @include mobile-screen {
+            overflow-x: scroll;
+          }
+
+          @include small-mobile-screen {
+            overflow-x: scroll;
+          }
         }
 
         pre {
